syntax = "proto3";
package klyraprotocol.prices;

import "gogoproto/gogo.proto";
import "klyraprotocol/prices/market_param.proto";
import "klyraprotocol/prices/market_price.proto";

option go_package = "github.com/StreamFinance-Protocol/stream-chain/protocol/x/prices/types";

// GenesisState defines the prices module's genesis state.
message GenesisState {
  repeated MarketParam market_params = 1 [ (gogoproto.nullable) = false ];
  repeated MarketPrice market_prices = 2 [ (gogoproto.nullable) = false ];
}
